--- a/chamber/index.html
+++ b/chamber/index.html
@@ -30,7 +30,7 @@
       <h1>Allen Chamber of Commerce</h1>
       <div id="logo">
         <picture
-          ><img src="images/allen-logo-white.png" alt="Allen Logo"
+          ><img src="images/allen-logo-white.webp" alt="Allen Logo"
         /></picture>
       </div>
       <div class="social-media">
@@ -38,7 +38,7 @@
           ><picture
             ><img
               class="icons"
-              src="images/facebook-icon.png"
+              src="images/facebook-icon.webp"
               alt="Facebook Logo" /></picture
         ></a>
 
@@ -46,7 +46,7 @@
           ><picture
             ><img
               class="icons"
-              src="images/linkenin-icon.png"
+              src="images/linkenin-icon.webp"
               alt="Linkedin logo" /></picture
         ></a>
       </div>
@@ -103,7 +103,7 @@
         <picture
           ><img
             class="weatherimg"
-            src="images/partly-cloudy.png"
+            src="images/partly-cloudy.webp"
             alt="Sun with clouds covering it"
         /></picture>
 
@@ -119,7 +119,7 @@
       <div class="spotLights">
         <div class="spotLight1">
           <strong>Local Moving Company</strong><br />
-          <picture><img src="images/truck.png" alt="Moving truck" /></picture>
+          <picture><img src="images/truck.webp" alt="Moving truck" /></picture>
 
           <br />
           To learn more please contact 469-218-5339
@@ -128,7 +128,7 @@
         <div class="spotLight2">
           <strong>Weekly Farmers Market</strong><br />
           <picture
-            ><img src="images/market-farm.png" alt="Market booth"
+            ><img src="images/market-farm.webp" alt="Market booth"
           /></picture>
           <br />
           Come and visit evey Tue & Fri from 7-11 a.m. outside the cocal
@@ -137,7 +137,7 @@
 
         <div class="spotLight3">
           <strong>24/7 Handyman Service</strong><br />
-          <picture><img src="images/tools.png" alt="Toolbox" /></picture><br />
+          <picture><img src="images/tools.webp" alt="Toolbox" /></picture><br />
           Our local handyman is avalible 24/7. You can contact him at
           468-844-3936
         </div>
@@ -154,7 +154,7 @@
     <footer>
       <picture>
         <img
-          src="images/allen-logo-white.png"
+          src="images/allen-logo-white.webp"
           alt="Allen Logo"
           class="footer-logo"
         />
