--- a/chamber/index.html
+++ b/chamber/index.html
@@ -54,7 +54,7 @@
       <nav>
         <ul class="navigation">
           <li><a class="ham" href="#">&#9776; Menu</a></li>
-          <li><a href="#">Discover</a></li>
+          <li><a href="discover.html">Discover</a></li>
           <li><a href="#">Directory</a></li>
           <li><a href="#">Join</a></li>
           <li><a href="#">Contact</a></li>
