--- a/chamber/index.html
+++ b/chamber/index.html
@@ -21,6 +21,7 @@
       rel="stylesheet"
     />
     <script src="js/script.js" defer></script>
+    <script src="js/windchill.js" defer></script>
   </head>
   <body>
     <div id="banner">
