--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <li>Lesson 04: <a href="chamber/index.html">Chamber of Commerce</a></li>
         <li>Lesson 05: <a href="lesson5/bom.html">DOM Activity</a></li> <a href="chamber/index.html">Updated Chamber of Commerce</a></li>
         <li>Lesson 06: <a href="chamber/index.html">More updats to the Chamber of Commerce site</a></li>
-        <li>Lesson 07: <a href="lesson7/lazyload.html">Lazy Loading</a></li> <a href="chamber/index.html">Discover Page</a></li>
+        <li>Lesson 07: <a href="lesson7/lazyload.html">Lazy Loading</a></li> <a href="chamber/discover.html">Discover Page</a></li>
         <li>Lesson 08: <a href="#">Title</a></li>
         <li>Lesson 09: <a href="#">Title</a></li>
         <li>Lesson 10: <a href="#">Title</a></li>
