--- a/chamber/join.html
+++ b/chamber/join.html
@@ -21,7 +21,6 @@
       rel="stylesheet"
     />
     <script src="js/script.js" defer></script>
-    <script src="js/windchill.js" defer></script>
   </head>
   <body>
     <div id="banner">
@@ -60,7 +59,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="discover.html">Discover</a></li>
           <li><a href="#">Directory</a></li>
-          <li><a href="join.html">Join</a></li>
+          <li><a href="#">Join</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
       </nav>
@@ -68,91 +67,10 @@
       <div class="today"></div>
     </header>
     <main>
-      <section class="callToAction">
-        <h2>Welcom to Allen Texas!</h2>
+     
 
-        <picture>
-          <source
-            media="(min-width: 1100px)"
-            srcset="images/flag-texas.webp"
-          />
-          <source
-            media="(min-width: 32.5em)"
-            srcset="images/flag-texas-medium.webp"
-          />
-          <source
-            media="(max-width: 599px)"
-            srcset="images/flag-texas-medium.webp"
-          />
-          <img src="images/flag-texas.webp" alt="Texas flag" />
-        </picture>
 
-        <button type="button" class="join-button">
-          Click here to join the chamber
-        </button>
-      </section>
-
-      <div class="event">
-        Grand Opening<br />
-        <strong>Cupcake shop</strong> 🧁<br />
-        Join us for the grand opening of the new cupcake shop, Friday at 11:00
-        a.m.
-      </div>
-
-      <div class="weather">
-        <strong>Weather</strong>
-
-        <p>Currently: <span id="temp">23</span>&#176;F</p>
-
-        <picture
-          ><img
-            class="weatherimg"
-            src="images/partly-cloudy.webp"
-            alt="Sun with clouds covering it"
-        /></picture>
-
-        <p>Wind Speed: <span id="speed">30</span> mph</p>
-        <p>Wind Chill: <span id="wind"></span></p>
-      </div>
-
-      <div class="news">
-        <strong>Allen News</strong><br />Work on improvements to Allen Heritage
-        Village are slated for completion by summer 2023.
-      </div>
-
-      <div class="spotLights">
-        <div class="spotLight1">
-          <strong>Local Moving Company</strong><br />
-          <picture><img src="images/truck.webp" alt="Moving truck" /></picture>
-
-          <br />
-          To learn more please contact 469-218-5339
-        </div>
-
-        <div class="spotLight2">
-          <strong>Weekly Farmers Market</strong><br />
-          <picture
-            ><img src="images/market-farm.webp" alt="Market booth"
-          /></picture>
-          <br />
-          Come and visit evey Tue & Fri from 7-11 a.m. outside the cocal
-          library.
-        </div>
-
-        <div class="spotLight3">
-          <strong>24/7 Handyman Service</strong><br />
-          <picture><img src="images/tools.webp" alt="Toolbox" /></picture><br />
-          Our local handyman is avalible 24/7. You can contact him at
-          468-844-3936
-        </div>
-      </div>
-
-      <div class="join">
-        <button>Join Us!</button>
-        <br />
-        Discover how to join the Allen Chamber of Commerce and discover the
-        benefits for you, and your organization!
-      </div>
+        
     </main>
 
     <footer>
