--- a/lesson-8/tablebuild.html
+++ b/lesson-8/tablebuild.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="author" content="Sara Matheney Tague" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tabil Build</title>
+    <title>Table Build</title>
     <meta
       name="description"
       content="Actuvity from week 8. A table recreation."
