--- a/lesson-8/tablebuild.html
+++ b/lesson-8/tablebuild.html
@@ -29,6 +29,7 @@
       </tr>
     </thead>
     <tbody>
+        <tr>
         <td>August</td>
         <td>$3,590</td>
         <td>$4,000</td>
@@ -61,7 +62,7 @@
     </tbody>
     <tfoot>
         <tr>
-            <td colspan="3" scope="row">Compiled 12.20.2020 by bRauls</td>
+            <td colspan="3">Compiled 12.20.2020 by bRauls</td>
           </tr>
     </tfoot>
   </table>
