--- a/chamber/join.html
+++ b/chamber/join.html
@@ -21,6 +21,7 @@
       rel="stylesheet"
     />
     <script src="js/script.js" defer></script>
+    <script src="js/lazyload.js" defer></script>
   </head>
   <body>
     <div id="banner">
@@ -59,18 +60,179 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="discover.html">Discover</a></li>
           <li><a href="#">Directory</a></li>
-          <li><a href="#">Join</a></li>
+          <li><a href="join.html">Join</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
       </nav>
 
       <div class="today"></div>
     </header>
-    <main>
-     
+    <h2 class="join-title">Join the Allen Chamber of Commerce</h2>
+    <main class="join-main">
+      <article class="testimonial-one">
+        <h2>Member Testimonial</h2>
+        <picture
+          ><img
+            class="testimonial"
+            src="images/placeholder-image.png"
+            data-src="images/person-one.jpg"
+            alt="Person one"
+        /></picture>
+        <p>
+          "The Main Line Chamber of Commerce's Society of Professional Women
+          attracts high-caliber individuals and the networking is incredibly
+          valuable. This program has helped Firstrust gain greater visibility
+          with current and future clients, and the speakers and their topics
+          teach our employees, of all generations, the valuable leadership
+          skills that are critical to their professional development."
+        </p>
+      </article>
 
+      <article class="testimonial-two">
+        <h2>Member Testimonial</h2>
+        <picture
+          ><img
+            class="testimonial"
+            src="images/placeholder-image.png"
+            data-src="images/person-two.jpg"
+            alt="Person two"
+        /></picture>
+        <p>
+          "The MLCC has been such a welcoming experience and has a real sense of
+          community among members! The staff and members have supported Harvest
+          and helped me to become a real “Connector in the Community."
+        </p>
+      </article>
 
-        
+      <article class="testimonial-three">
+        <h2>Member Testimonial</h2>
+        <picture
+          ><img
+            class="testimonial"
+            src="images/placeholder-image.png"
+            data-src="images/person-three.jpg"
+            alt="Person three"
+        /></picture>
+        <p>
+          “My Chamber experience has exceeded my expectations. I have met some
+          great people and developed new business relationships. I look forward
+          to future involvement with the Chamber and the positive impact on my
+          company.”
+        </p>
+      </article>
+
+      <article class="testimonial-four">
+        <h2>Member Testimonial</h2>
+        <picture
+          ><img
+            class="testimonial"
+            src="images/placeholder-image.png"
+            data-src="images/person-four.jpg"
+            alt="Person four"
+        /></picture>
+        <p>
+          "There is no better place to develop your business than The Main Line
+          Chamber of Commerce. I have been able to meet and do business with the
+          nicest and most professional people. My accountant, banker, roofer,
+          insurance broker, payroll service provider and financial planner all
+          are Chamber members. I even got my dog Addy from a Chamber contact.
+          The Main Line Chamber is a terrific organization."
+        </p>
+      </article>
+
+      <form class="join-form" method="get" action="thankyou.html">
+        <fieldset>
+          <legend>Primary Contact</legend>
+          <label class="top"
+            >First Name*<input type="text" name="fname" required
+          /></label>
+          <label class="top"
+            >Last Name*<input type="text" name="lname" required
+          /></label>
+          <label class="top"
+            >Email*<input
+              type="email"
+              name="email"
+              placeholder="example@gmail.com"
+              required
+          /></label>
+          <label class="top"
+            >Phone*<input type="tel" name="phone" required
+          /></label>
+        </fieldset>
+        <fieldset>
+          <legend>Member Info</legend>
+          <label class="top"
+            >Business Position<input
+              type="text"
+              name="bus-position"
+              pattern="[A-Za-z\s-]{7,}"
+              title="Business Position"
+          /></label>
+          <label class="top"
+            >Business Name<input
+              type="text"
+              name="bus-name"
+              title="Business Name"
+              required
+          /></label>
+          <label class="top"
+            >Business Description <br /><textarea
+              rows="3"
+              name="bus-description"
+            ></textarea>
+          </label>
+        </fieldset>
+        <fieldset>
+          <legend>Membership Package</legend>
+          <label class="sbs"
+            ><input type="radio" name="member" value="np" /><span class="level">
+              Non-profit </span
+            ><span class="cost"> Free </span></label
+          >
+          <p class="description">
+            Have your business listed in the Allen Texas Chamber of Commerce online
+            directory.
+          </p>
+          <label class="sbs"
+            ><input type="radio" name="member" value="bronze" /><span
+              class="level"
+            >
+              Bronze </span
+            ><span class="cost"> $1,000 </span></label
+          >
+          <p class="description">
+            See some growth for your company by being included in our website
+            spotlights and online directory.
+          </p>
+          <label class="sbs"
+            ><input type="radio" name="member" value="silver" /><span
+              class="level"
+            >
+              Silver </span
+            ><span class="cost"> $3,000 </span></label
+          >
+          <p class="description">
+            Stay up-to-date in the Chamber's events, receive spotlights, and be
+            included in the chamber's online directory.
+          </p>
+          <label class="sbs"
+            ><input type="radio" name="member" value="gold" /><span
+              class="level"
+            >
+              Gold </span
+            ><span class="cost"> $6,000 </span></label
+          >
+          <p class="description">
+            Become a part of the conversation at executive meetings, formal
+            dinners, events, spotlights, and included in the online directory.
+          </p>
+        </fieldset>
+        <label
+          ><input type="hidden" id="submitdate" name="submitdate" value=""
+        /></label>
+        <input type="submit" class="submitBtn" value="Join the Chamber" />
+      </form>
     </main>
 
     <footer>
