--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <li>Lesson 05: <a href="lesson5/bom.html">DOM Activity</a></li> <a href="chamber/index.html">Updated Chamber of Commerce</a></li>
         <li>Lesson 06: <a href="chamber/index.html">More updats to the Chamber of Commerce site</a></li>
         <li>Lesson 07: <a href="lesson7/lazyload.html">Lazy Loading</a></li> <a href="chamber/discover.html">Discover Page</a></li>
-        <li>Lesson 08: <a href="lesson-8/tablebuild.html">Table Build</a></li>
+        <li>Lesson 08: <a href="lesson-8/tablebuild.html">Table Build</a></li><a href="chamber/join.html">Join Page</a></li>
         <li>Lesson 09: <a href="#">Title</a></li>
         <li>Lesson 10: <a href="#">Title</a></li>
         <li>Lesson 11: <a href="#">Title</a></li>
