--- a/chamber/contact.html
+++ b/chamber/contact.html
@@ -7,7 +7,7 @@
     <title>Allen Chamber of Commerce</title>
     <meta
       name="description"
-      content="Thank you page for joining the chamber"
+      content="A page that will allow you to get in contact with a representative for the Allen Chamber of Commerce"
     />
     <link rel="shortcut icon" href="../favicon.ico" />
     <link rel="stylesheet" href="css/normalize.css" />
@@ -62,22 +62,13 @@
             <li><a href="directory.html">Directory</a></li>
             <li><a href="join.html">Join</a></li>
             <li><a href="contact.html">Contact</a></li>
-        </ul>
       </nav>
 
       <div class="today"></div>
     </header>
-    <main class="thank-you-main">
-      <article class="thank-you">
-        <picture
-          ><img
-            class="welcome-img"
-            src="images/welcome.jpg"
-            alt="Welcome graphic"
-        /></picture>
-        <h2>Thank you!</h2>
-        <p>You have sucssefuly joined the Allen Chamber of Commerce!</p>
-      </article>
+    <h2 >Contact the Allen Chamber of Commerce</h2>
+    <main class="contact-main">
+      
     </main>
 
     <footer>
