--- a/chamber/join.html
+++ b/chamber/join.html
@@ -7,7 +7,7 @@
     <title>Allen Chamber of Commerce</title>
     <meta
       name="description"
-      content="Home page for the Allen Texas Chamber of Commerce Site"
+      content="Page to sign up to join the Allen Chamber of Commerce."
     />
     <link rel="shortcut icon" href="../favicon.ico" />
     <link rel="stylesheet" href="css/normalize.css" />
@@ -56,13 +56,12 @@
 
       <nav>
         <ul class="navigation">
-          <li><a class="ham" href="#">&#9776; Menu</a></li>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="discover.html">Discover</a></li>
-          <li><a href="#">Directory</a></li>
-          <li><a href="join.html">Join</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
+            <li><a class="ham" href="#">&#9776; Menu</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="discover.html">Discover</a></li>
+            <li><a href="directory.html">Directory</a></li>
+            <li><a href="join.html">Join</a></li>
+            <li><a href="contact.html">Contact</a></li>
       </nav>
 
       <div class="today"></div>
