--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -20,8 +20,7 @@
       href="https://fonts.googleapis.com/css2?family=Hind:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <script src="js/script.js" defer></script>
-    <script src="js/lazyload.js" defer></script>
+    <script src="js/directory.js" defer></script>
   </head>
   <body>
     <div id="banner">
@@ -66,9 +65,12 @@
 
       <div class="today"></div>
     </header>
-    <h2 >Directory</h2>
-    <main class="directory-main">
-      
+         
+      <h2 >Directory</h2>
+
+    </header>
+    <main>
+      <div class="cards"></div>
     </main>
 
     <footer>
