--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -27,6 +27,7 @@
       Come join us for the chamber meet and greet Wednesday at 7:00 p.m.
     </div>
     <header>
+
       <h1>Allen Chamber of Commerce</h1>
 
       <div id="logo">
@@ -66,11 +67,18 @@
       <div class="today"></div>
     </header>
          
-      <h2 >Directory</h2>
+    <h2>Directory</h2>
+    <main class="main-direct">
+      <section class="directory">
+        <div class="list-view-btn">
+          <button id="list-btn"> <img src="images/list-view.png" alt="list view button" width="50"></button>
+          <button id="card-btn"> <img src="images/card-view.png" alt="list view button" width="50"></button>
+        </div>
+        <div class="cards list-view">
 
-    </header>
-    <main>
-      <div class="cards"></div>
+
+        </div>
+        </section>
     </main>
 
     <footer>
