--- a/chamber/contact.html
+++ b/chamber/contact.html
@@ -21,7 +21,7 @@
       rel="stylesheet"
     />
     <script src="js/script.js" defer></script>
-    <script src="js/lazyload.js" defer></script>
+    <script src="js/contact.js" defer></script>
   </head>
   <body>
     <div id="banner">
@@ -69,6 +69,38 @@
     <h2 >Contact the Allen Chamber of Commerce</h2>
     <main class="contact-main">
       
+      <h2 class="contactus">
+        Want to get in contact with us? Write us a message below.
+      </h2>
+      <p class="fun-fact-contact">
+        <b>Fun fact:</b> Stories from the Middle Ages say that knights would
+        go out to fight dragons as a test of their bravery.
+      </p>
+      <br />
+      <div id="feedback"></div>
+      <form class="formie" action="/my-handling-form-page" method="post">
+        <ul>
+          <li>
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="user_name" />
+          </li>
+          <li>
+            <label for="mail">E-mail:</label>
+            <input type="email" id="mail" name="user_email" />
+          </li>
+          <li>
+            <label for="msg">Message:</label>
+            <textarea id="msg" name="user_message"></textarea>
+          </li>
+          <li class="button">
+            <button type="submit">Send your message</button>
+          </li>
+        </ul>
+      </form>
+
+
+
+
     </main>
 
     <footer>
