--- a/chamber/index.html
+++ b/chamber/index.html
@@ -72,10 +72,7 @@
         <h2>Welcom to Allen Texas!</h2>
 
         <picture>
-          <source
-            media="(min-width: 1100px)"
-            srcset="images/flag-texas.jpg"
-          />
+          <source media="(min-width: 1100px)" srcset="images/flag-texas.jpg" />
           <source
             media="(min-width: 32.5em)"
             srcset="images/flag-texas-medium.webp"
@@ -96,28 +93,28 @@
         Grand Opening<br />
         <strong>Cupcake shop</strong> 🧁<br />
         Join us for the grand opening of the new cupcake shop, Friday at 11:00
-        a.m.
+        a.m. <br/> Lorem ipsum dolor sit amet, consectetur
+        adipiscing elit, sed do eiusmod tempor incididunt handry.
       </div>
 
       <div class="weather">
-        <strong>Weather</strong>
-
-        <p>Currently: <span id="temp">23</span>&#176;F</p>
-
-        <picture
-          ><img
-            class="weatherimg"
-            src="images/partly-cloudy.webp"
-            alt="Sun with clouds covering it"
-        /></picture>
-
-        <p>Wind Speed: <span id="speed">30</span> mph</p>
-        <p>Wind Chill: <span id="wind"></span></p>
+        <h2>Current Weather</h2>
+        <img src="" alt="" id="weathericon" />
+        <h4><span id="current-temp"></span> &#176;F</h4>
+        <h5><span id="desc"></span></h5>
+        <hr />
+        <p>Wind Speed: <span id="speed"></span> mph</p>
+        <p>Wind Chill: <span id="windchill"></span></p>
       </div>
 
       <div class="news">
-        <strong>Allen News</strong><br />Work on improvements to Allen Heritage
-        Village are slated for completion by summer 2023.
+        <strong>Allen News</strong><br />Lorem ipsum dolor sit amet, consectetur
+        adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+        laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+        in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
+        qui officia deserunt mollit anim id est laborum.
       </div>
 
       <div class="spotLights">
@@ -175,7 +172,8 @@
       </div>
 
       <hr />
-      &copy; <span id="year">year</span> | Sara M. Tague | Texas
+      &copy; <span id="year">year</span> | Sara M. Tague | Texas <br />
+      Weather provided by OpenWeatherMap
       <p id="lastmod"></p>
     </footer>
   </body>
