--- a/chamber/join.html
+++ b/chamber/join.html
@@ -201,8 +201,8 @@
             ><span class="cost"> $1,000 </span></label
           >
           <p class="description">
-            See some growth for your company by being included in our website
-            spotlights and online directory.
+            See growth for your buissness by being included in our chamber
+            spotlights and directory.
           </p>
           <label class="sbs"
             ><input type="radio" name="member" value="silver" /><span
