--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <li>Lesson 07: <a href="lesson7/lazyload.html">Lazy Loading</a></li> <a href="chamber/discover.html">Discover Page</a></li>
         <li>Lesson 08: <a href="lesson-8/tablebuild.html">Table Build</a></li><a href="chamber/join.html">Join Page</a></li>
         <li>Lesson 09: <a href="lesson9/prophets.html">Prophet Cards - JSON</a></li><a href="chamber/directory.html">Directory Page</a></li>
-        <li>Lesson 10: <a href="#">Title</a></li>
+        <li>Lesson 10: <a href="chamber/index.html">Home page with updated weather</a></li>
         <li>Lesson 11: <a href="#">Title</a></li>
       </ul>
     </nav>
