--- a/chamber/index.html
+++ b/chamber/index.html
@@ -72,7 +72,7 @@
         <h2>Welcom to Allen Texas!</h2>
 
         <picture>
-          <source media="(min-width: 1100px)" srcset="images/flag-texas.jpg" />
+          <source media="(min-width: 1100px)" srcset="images/bluebonnets-large.jpg" />
           <source
             media="(min-width: 32.5em)"
             srcset="images/flag-texas-medium.webp"
