--- a/chamber/index.html
+++ b/chamber/index.html
@@ -22,6 +22,7 @@
     />
     <script src="js/script.js" defer></script>
     <script src="js/windchill.js" defer></script>
+    <script src="js/spotlights.js" defer></script>
   </head>
   <body>
     <div id="banner">
@@ -72,7 +73,10 @@
         <h2>Welcom to Allen Texas!</h2>
 
         <picture>
-          <source media="(min-width: 1100px)" srcset="images/bluebonnets-large.jpg" />
+          <source
+            media="(min-width: 1100px)"
+            srcset="images/bluebonnets.webp"
+          />
           <source
             media="(min-width: 32.5em)"
             srcset="images/flag-texas-medium.webp"
@@ -85,16 +89,20 @@
         </picture>
 
         <button type="button" class="join-button">
-          Click here to join the chamber
+          <a href="join.html">Join Chamber!</a>
         </button>
+
+
+        
       </section>
 
       <div class="event">
         Grand Opening<br />
         <strong>Cupcake shop</strong> 🧁<br />
         Join us for the grand opening of the new cupcake shop, Friday at 11:00
-        a.m. <br/> Lorem ipsum dolor sit amet, consectetur
-        adipiscing elit, sed do eiusmod tempor incididunt handry.
+        a.m. <br />
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+        tempor incididunt handry.
       </div>
 
       <div class="weather">
@@ -117,35 +125,17 @@
         qui officia deserunt mollit anim id est laborum.
       </div>
 
-      <div class="spotLights">
-        <div class="spotLight1">
-          <strong>Local Moving Company</strong><br />
-          <picture><img src="images/truck.webp" alt="Moving truck" /></picture>
+      <div class="spotlights">
 
-          <br />
-          To learn more please contact 469-218-5339
-        </div>
-
-        <div class="spotLight2">
-          <strong>Weekly Farmers Market</strong><br />
-          <picture
-            ><img src="images/market-farm.webp" alt="Market booth"
-          /></picture>
-          <br />
-          Come and visit evey Tue & Fri from 7-11 a.m. outside the cocal
-          library.
-        </div>
-
-        <div class="spotLight3">
-          <strong>24/7 Handyman Service</strong><br />
-          <picture><img src="images/tools.webp" alt="Toolbox" /></picture><br />
-          Our local handyman is avalible 24/7. You can contact him at
-          468-844-3936
-        </div>
       </div>
 
+
+
+
       <div class="join">
-        <button>Join Us!</button>
+        <button>
+          <a href="join.html">Join Us!</a>
+        </button>
         <br />
         Discover how to join the Allen Chamber of Commerce and discover the
         benefits for you, and your organization!
@@ -153,27 +143,30 @@
     </main>
 
     <footer>
-      <picture>
-        <img
-          src="images/allen-logo-white.webp"
-          alt="Allen Logo"
-          class="footer-logo"
-        />
-      </picture>
-      <h1>Allen Chamber of Commerce</h1>
-      <p>301 Century Pkwy, Allen, TX 75013<br /></p>
-      <p>allencommerce@gmail.com</p>
-      <p>+(469) 2589-2693</p>
-      <div>
-        <a
-          href="https://www.google.com/maps/place/Allen,+TX/@33.1141831,-96.7077114,13z/data=!3m1!4b1!4m5!3m4!1s0x864c172e4d9479bd:0xcae82aa992de2cd5!8m2!3d33.1031744!4d-96.6705503"
-          ><p class="map">&#128204;Map of Allen</p></a
-        >
+      <div class="footer-seperation">
+        <section>
+          <picture>
+            <img
+              src="images/allen-logo-white.webp"
+              alt="Allen Logo"
+              class="footer-logo"
+            />
+          </picture>
+          <h1>Allen Chamber of Commerce</h1>
+          <p>+(469) 2589-2693</p>
+        </section>
+        <div class="contact">
+          <p>allencommerce@gmail.com</p>
+          <p>301 Century Pkwy, Allen, TX 75013</p>
+          <a
+            href="https://www.google.com/maps/place/Allen,+TX/@33.1141831,-96.7077114,13z/data=!3m1!4b1!4m5!3m4!1s0x864c172e4d9479bd:0xcae82aa992de2cd5!8m2!3d33.1031744!4d-96.6705503"
+            ><p class="map">&#128204;Map of Allen</p></a
+          >
+        </div>
       </div>
-
       <hr />
-      &copy; <span id="year">year</span> | Sara M. Tague | Texas <br />
-      Weather provided by OpenWeatherMap
+      &copy; <span id="year">year</span> | Sara M. Tague | Texas | Weather provided by OpenWeatherMap 
+      
       <p id="lastmod"></p>
     </footer>
   </body>
