--- a/chamber/contact.html
+++ b/chamber/contact.html
@@ -72,11 +72,7 @@
       <h2 class="contactus">
         Want to get in contact with us? Write us a message below.
       </h2>
-      <p class="fun-fact-contact">
-        <b>Fun fact:</b> Stories from the Middle Ages say that knights would
-        go out to fight dragons as a test of their bravery.
-      </p>
-      <br />
+
       <div id="feedback"></div>
       <form class="formie" action="/my-handling-form-page" method="post">
         <ul>
@@ -92,7 +88,7 @@
             <label for="msg">Message:</label>
             <textarea id="msg" name="user_message"></textarea>
           </li>
-          <li class="button">
+          <li class="messageButton">
             <button type="submit">Send your message</button>
           </li>
         </ul>
