--- a/chamber/index.html
+++ b/chamber/index.html
@@ -91,9 +91,6 @@
         <button type="button" class="join-button">
           <a href="join.html">Join Chamber!</a>
         </button>
-
-
-        
       </section>
 
       <div class="event">
@@ -125,12 +122,7 @@
         qui officia deserunt mollit anim id est laborum.
       </div>
 
-      <div class="spotlights">
-
-      </div>
-
-
-
+      <div class="spotlights"></div>
 
       <div class="join">
         <button>
@@ -165,8 +157,9 @@
         </div>
       </div>
       <hr />
-      &copy; <span id="year">year</span> | Sara M. Tague | Texas | Weather provided by OpenWeatherMap 
-      
+      &copy; <span id="year">year</span> | Sara M. Tague | Texas | Weather
+      provided by OpenWeatherMap
+
       <p id="lastmod"></p>
     </footer>
   </body>
