--- a/chamber/join.html
+++ b/chamber/join.html
@@ -187,7 +187,7 @@
           <label class="sbs"
             ><input type="radio" name="member" value="np" /><span class="level">
               Non-profit </span
-            ><span class="cost"> Free </span></label
+            ><span class="price"> Free </span></label
           >
           <p class="description">
             Have your business listed in the Allen Texas Chamber of Commerce online
@@ -198,7 +198,7 @@
               class="level"
             >
               Bronze </span
-            ><span class="cost"> $1,000 </span></label
+            ><span class="price"> $1,000 </span></label
           >
           <p class="description">
             See growth for your buissness by being included in our chamber
@@ -209,7 +209,7 @@
               class="level"
             >
               Silver </span
-            ><span class="cost"> $3,000 </span></label
+            ><span class="price"> $3,000 </span></label
           >
           <p class="description">
             Stay up-to-date in the Chamber's events, receive spotlights, and be
@@ -220,7 +220,7 @@
               class="level"
             >
               Gold </span
-            ><span class="cost"> $6,000 </span></label
+            ><span class="price"> $6,000 </span></label
           >
           <p class="description">
             Become a part of the conversation at executive meetings, formal
@@ -230,31 +230,35 @@
         <label
           ><input type="hidden" id="submitdate" name="submitdate" value=""
         /></label>
-        <input type="submit" class="submitBtn" value="Join the Chamber" />
+        <input type="submit" class="submit" value="Join the Chamber" />
       </form>
     </main>
 
     <footer>
-      <picture>
-        <img
-          src="images/allen-logo-white.webp"
-          alt="Allen Logo"
-          class="footer-logo"
-        />
-      </picture>
-      <h1>Allen Chamber of Commerce</h1>
-      <p>301 Century Pkwy, Allen, TX 75013<br /></p>
-      <p>allencommerce@gmail.com</p>
-      <p>+(469) 2589-2693</p>
-      <div>
-        <a
-          href="https://www.google.com/maps/place/Allen,+TX/@33.1141831,-96.7077114,13z/data=!3m1!4b1!4m5!3m4!1s0x864c172e4d9479bd:0xcae82aa992de2cd5!8m2!3d33.1031744!4d-96.6705503"
-          ><p class="map">&#128204;Map of Allen</p></a
-        >
+      <div class="footer-seperation">
+        <section>
+          <picture>
+            <img
+              src="images/allen-logo-white.webp"
+              alt="Allen Logo"
+              class="footer-logo"
+            />
+          </picture>
+          <h1>Allen Chamber of Commerce</h1>
+          <p>+(469) 2589-2693</p>
+        </section>
+        <div class="contact">
+          <p>allencommerce@gmail.com</p>
+          <p>301 Century Pkwy, Allen, TX 75013</p>
+          <a
+            href="https://www.google.com/maps/place/Allen,+TX/@33.1141831,-96.7077114,13z/data=!3m1!4b1!4m5!3m4!1s0x864c172e4d9479bd:0xcae82aa992de2cd5!8m2!3d33.1031744!4d-96.6705503"
+            ><p class="map">&#128204;Map of Allen</p></a
+          >
+        </div>
       </div>
-
       <hr />
       &copy; <span id="year">year</span> | Sara M. Tague | Texas
+
       <p id="lastmod"></p>
     </footer>
   </body>
