--- a/chamber/thankyou-contact.html
+++ b/chamber/thankyou-contact.html
@@ -7,7 +7,7 @@
     <title>Allen Chamber of Commerce</title>
     <meta
       name="description"
-      content="Directory for companies that are a part of the Allen Chamber of Commerce"
+      content="Home page for the Allen Texas Chamber of Commerce Site"
     />
     <link rel="shortcut icon" href="../favicon.ico" />
     <link rel="stylesheet" href="css/normalize.css" />
@@ -20,15 +20,15 @@
       href="https://fonts.googleapis.com/css2?family=Hind:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <script src="js/directory.js" defer></script>
     <script src="js/script.js" defer></script>
+    <script src="js/windchill.js" defer></script>
+    <script src="js/spotlights.js" defer></script>
   </head>
   <body>
     <div id="banner">
       Come join us for the chamber meet and greet Wednesday at 7:00 p.m.
     </div>
     <header>
-
       <h1>Allen Chamber of Commerce</h1>
 
       <div id="logo">
@@ -57,29 +57,28 @@
 
       <nav>
         <ul class="navigation">
-            <li><a class="ham" href="#">&#9776; Menu</a></li>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="discover.html">Discover</a></li>
-            <li><a href="directory.html">Directory</a></li>
-            <li><a href="join.html">Join</a></li>
-            <li><a href="contact.html">Contact</a></li>
+          <li><a class="ham" href="#">&#9776; Menu</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="discover.html">Discover</a></li>
+          <li><a href="directory.html">Directory</a></li>
+          <li><a href="join.html">Join</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
       </nav>
 
       <div class="today"></div>
     </header>
-         
-    <h2>Directory</h2>
-    <main class="main-direct">
-      <section class="directory">
-        <div class="list-view-btn">
-          <button id="list-btn"> <img src="images/list-view.png" alt="list view button" width="50"></button>
-          <button id="card-btn"> <img src="images/card-view.png" alt="list view button" width="50"></button>
-        </div>
-        <div class="cards list-view">
-
-
-        </div>
-        </section>
+    <main class="thank-contact-main">
+        <article class="thank">
+            <picture
+              ><img
+                class="contact-img"
+                src="images/contact.webp"
+                alt="contact graphic"
+            /></picture>
+            <h2>Thank you for contacting the Allen Chamber of Commerce!</h2>
+            <p>We will get back to you soon!</p>
+          </article>
     </main>
 
     <footer>
