--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -81,26 +81,30 @@
     </main>
 
     <footer>
-      <picture>
-        <img
-          src="images/allen-logo-white.webp"
-          alt="Allen Logo"
-          class="footer-logo"
-        />
-      </picture>
-      <h1>Allen Chamber of Commerce</h1>
-      <p>301 Century Pkwy, Allen, TX 75013<br /></p>
-      <p>allencommerce@gmail.com</p>
-      <p>+(469) 2589-2693</p>
-      <div>
-        <a
-          href="https://www.google.com/maps/place/Allen,+TX/@33.1141831,-96.7077114,13z/data=!3m1!4b1!4m5!3m4!1s0x864c172e4d9479bd:0xcae82aa992de2cd5!8m2!3d33.1031744!4d-96.6705503"
-          ><p class="map">&#128204;Map of Allen</p></a
-        >
+      <div class="footer-seperation">
+        <section>
+          <picture>
+            <img
+              src="images/allen-logo-white.webp"
+              alt="Allen Logo"
+              class="footer-logo"
+            />
+          </picture>
+          <h1>Allen Chamber of Commerce</h1>
+          <p>+(469) 2589-2693</p>
+        </section>
+        <div class="contact">
+          <p>allencommerce@gmail.com</p>
+          <p>301 Century Pkwy, Allen, TX 75013</p>
+          <a
+            href="https://www.google.com/maps/place/Allen,+TX/@33.1141831,-96.7077114,13z/data=!3m1!4b1!4m5!3m4!1s0x864c172e4d9479bd:0xcae82aa992de2cd5!8m2!3d33.1031744!4d-96.6705503"
+            ><p class="map">&#128204;Map of Allen</p></a
+          >
+        </div>
       </div>
-
       <hr />
       &copy; <span id="year">year</span> | Sara M. Tague | Texas
+
       <p id="lastmod"></p>
     </footer>
   </body>
