--- a/chamber/join.html
+++ b/chamber/join.html
@@ -201,8 +201,7 @@
             ><span class="price"> $1,000 </span></label
           >
           <p class="description">
-            See growth for your buissness by being included in our chamber
-            spotlights and directory.
+            An affordable price for great business opprotunities. If you want to be a more active member in the community and be invited to participate in local events then the bronze membership might be for you. 
           </p>
           <label class="sbs"
             ><input type="radio" name="member" value="silver" /><span
@@ -212,7 +211,8 @@
             ><span class="price"> $3,000 </span></label
           >
           <p class="description">
-            Stay up-to-date in the Chamber's events, receive spotlights, and be
+            See growth for your buissness by being included in our chamber
+            spotlights and directory. Stay up-to-date in the Chamber's events, receive spotlights, and be
             included in the chamber's online directory.
           </p>
           <label class="sbs"
@@ -223,8 +223,7 @@
             ><span class="price"> $6,000 </span></label
           >
           <p class="description">
-            Become a part of the conversation at executive meetings, formal
-            dinners, events, spotlights, and included in the online directory.
+            The gold membership gives you and your company complete access to the Greater Area Commmerse resources. Your company will be the featured business on the Greater Area Commerse homepage. Your company will recieve invitations to every exculsive and public event held by the commerse.
           </p>
         </fieldset>
         <label
