--- a/chamber/contact.html
+++ b/chamber/contact.html
@@ -88,13 +88,19 @@
     <article class="contact-info">
 
       <h2>Contact Information</h2>
-      <p>Hours are Mon-Fri 8am-5pm</p>
+      <picture
+              ><img
+                class="contact-page-img"
+                src="images/contact.webp"
+                alt="contact graphic"
+            /></picture>
+      <p>Hours are Mon-Fri 8am-5pm (MST)</p>
       <p>+(469) 2589-2693</p>
       <p>allencommerce@gmail.com</p>
-      <p>301 Century Pkwy, Allen, TX 75013</p>
+      <p>301 Century Parkway, Allen, Texas 75013</p>
       <a
         href="https://www.google.com/maps/place/Allen,+TX/@33.1141831,-96.7077114,13z/data=!3m1!4b1!4m5!3m4!1s0x864c172e4d9479bd:0xcae82aa992de2cd5!8m2!3d33.1031744!4d-96.6705503"
-        ><p class="address">&#128204;Map of Allen</p></a
+        ><p class="contact-map">&#128204;Map of Allen</p></a
       >
     </article>
 
