--- a/chamber/index.html
+++ b/chamber/index.html
@@ -75,7 +75,7 @@
 
         <picture>
           <source
-            media="(min-width: 1100px)"
+            media="(min-width: 1300px)"
             srcset="images/bluebonnets.webp"
           />
           <source
@@ -90,7 +90,7 @@
         </picture>
 
         <button type="button" class="join-button">
-          <a href="join.html">Join Chamber!</a>
+          <a href="join.html">Join the Allen Chamber!</a>
         </button>
       </section>
 
